Paso 7 (Ejercicios Clase)

--- a/ProyectoTec/Info.plist
+++ b/ProyectoTec/Info.plist
@@ -32,6 +32,8 @@
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>iPad</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
