--- a/ProyectoTec/Info.plist
+++ b/ProyectoTec/Info.plist
@@ -34,6 +34,11 @@
 	<false/>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>iPad</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
